# Multithreaded-HTTP-Server-Implementation-in-C

./: CMakeLists.txt  Makefile  README.md
inc/: WebRequest.h  WebServer.h
src/: WebServer.c  WebServer.cpp  main.c  main.cpp
static/: deneme.json  index.html  test.json
